# flaskapi

./: .gitignore  pyproject.toml
examples/: api_blueprint_demo.py  nested_apiblueprint_demo.py  orjson_demo.py  response_demo.py  simple_demo.py  test.py  upload_file_demo.py
flaskapi4/doc/rapidoc/templates/rapidoc/js/: rapidoc-min.js
flaskapi4/doc/redoc/templates/redoc/js/: redoc.standalone.js
flaskapi4/doc/scalar/templates/scalar/js/: scalar.standalone.js
