[tool.poetry]
name = "flaskapi"
version = "0.1.0"
description = "flaskapi"
authors = ["王梓清 <9464553+superwzq1993@user.noreply.gitee.com>"]
readme = "README.md"

requires-python = ">=3.8"
dependencies = ["Flask>=2.0", "pydantic>=2.4"]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
